[package]
name = "vibes-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["make"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
tower-http = { version = "0.6.6", features = ["full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
